# erl_gp_sdf_ros

./: .gitignore  CMakeLists.txt  README.md  erl_gp_sdf_ros.repos  package.xml
cmake/: erl_gp_sdf_ros_dependencies.cmake
config/: lidar_frame_2d_gazebo.yaml  lidar_frame_3d_360.yaml
config/common/: bayesian_hilbert_surf_mapping_float.yaml  gp_occ_surf_mapping_float.yaml  sdf_mapping_float.yaml
config/jackal_2d/: bayesian_hilbert_sdf_mapping_float.yaml  bayesian_hilbert_sdf_mapping_lidar_float.yaml  bayesian_hilbert_surf_mapping_float.yaml  bayesian_hilbert_surf_mapping_lidar_float.yaml  lidar_frame_2d.yaml
config/jackal_2d/bayesian_hilbert/: sdf_mapping_float.yaml  surf_mapping_float.yaml  surf_mapping_float_scale0.1.yaml
config/jackal_3d/: bayesian_hilbert_sdf_mapping_lidar_float.yaml  bayesian_hilbert_surf_mapping_lidar_float.yaml  lidar_frame_3d_360.yaml  lidar_frame_3d_360_gazebo.yaml
config/jackal_3d/bayesian_hilbert/: sdf_mapping_lidar_float.yaml  surf_mapping_lidar_float.yaml
config/robot_yaml/: robot.rviz  robot.yaml
config/ros1/: bayesian_hilbert_float_2d.yaml  bayesian_hilbert_float_3d.yaml  gp_occ_float_2d.yaml  gp_occ_float_3d.yaml  use_lidar_frame_3d_float.yaml
config/ros2/: bayesian_hilbert_double_2d.yaml  bayesian_hilbert_double_3d.yaml  bayesian_hilbert_float_2d.yaml  bayesian_hilbert_float_3d.yaml  gp_occ_double_2d.yaml  gp_occ_double_3d.yaml  gp_occ_float_2d.yaml  gp_occ_float_3d.yaml  j100_bayesian_hilbert_float_3d.yaml  j100_use_lidar_frame_3d_float.yaml  jackal2_bayesian_hilbert_float_2d.yaml  lidar_frame_2d_gazebo.yaml  use_2d_lidar_jackal.yaml  use_lidar_frame_2d_float.yaml  use_lidar_frame_3d_double.yaml  use_lidar_frame_3d_float.yaml
config/xarm/: ros_params.yaml  sdf_mapping.yaml  surf_mapping.yaml
config/zed/: bayesian_hilbert_sdf_mapping_float.yaml  bayesian_hilbert_surf_mapping_float.yaml  camera_info.txt  depth_frame.yaml  depth_registered.txt  gp_occ_sdf_mapping_float.yaml  gp_occ_surf_mapping_float.yaml  point_cloud_registered.txt
docker/ros-humble/: Dockerfile  build.bash
docker/ros-humble-zed-camera/: Dockerfile  build.bash
docker/ros-jazzy-zed-camera/: Dockerfile  build.bash  common_stereo.yaml
docker/ros-noetic/: Dockerfile  build.bash  build_cuda.bash
docker/ros-noetic-jackal/: Dockerfile  build.bash
docker/ros-noetic-zed-camera/: Dockerfile  build.bash  common.yaml
include/erl_gp_sdf_ros/: compile_definitions.hpp
launch/: cow_and_lady.launch  cow_and_lady_launch.py  gazebo_room_2d.launch  gazebo_room_2d_launch.py  gp_sdf_mapping_jackal_2d.launch  jackal_2d_gazebo_launch.py  jackal_2d_lidar.launch  jackal_2d_lidar.launch.py  jackal_3d_lidar.launch  jackal_3d_lidar.launch.py  jackal_3d_lidar_bag.launch  jackal_3d_lidar_gazebo_launch.py  jackal_3d_lidar_launch.py  newer_college.launch  xarm.launch  xarm.launch.py  zed_camera.launch  zed_camera.launch.py  zed_camera_launch.py  zed_ros_bag.launch  zed_ros_live.launch
rviz/: cow_and_lady.rviz  gazebo_room_2d.rviz  jackal2_2d_lidar.rviz  jackal2_3d_lidar.rviz  newer_college.rviz  zed.rviz  zed_live.rviz
rviz2/: cow_and_lady.rviz  gazebo_room_2d.rviz  jackal2_3d_lidar.rviz  jackal2_3d_lidar_gazebo.rviz  xarm.rviz  zed.rviz
scripts/: bridge.bash  build_docker.bash  create_container.bash  create_workspace.bash  fix_rqt.bash  login_container.bash  run_ros1_bridge.bash  run_ros1_core.bash
src/ros1/: occ_visualization_node.cpp  ros.cmake  sdf_mapping_node.cpp  sdf_visualization_node.cpp
src/ros2/: occ_visualization_node.cpp  ros.cmake  sdf_mapping_node.cpp  sdf_visualization_node.cpp
