<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>erl_gp_sdf_ros</name>
    <version>0.3.0</version>
    <description>erl_gp_sdf_ros is a ROS package for SDF estimation.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_gp_sdf_ros.git</url>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
    <buildtool_depend>erl_cmake_tools</buildtool_depend>    <!-- required -->

    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>
    <depend condition="$ROS_VERSION == 2">rclpy</depend>

    <!-- common ROS dependencies -->
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_msgs</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend condition="$ROS_VERSION == 1">rviz</depend>
    <depend condition="$ROS_VERSION == 2">rviz_default_plugins</depend>

    <!-- ERL dependencies -->
    <depend>erl_common</depend>
    <depend>erl_covariance</depend>
    <depend>erl_geometry</depend>
    <depend>erl_geometry_msgs</depend>
    <depend>erl_geometry_ros</depend>
    <depend>erl_gaussian_process</depend>
    <depend>erl_gp_sdf</depend>
    <depend>erl_gp_sdf_msgs</depend>

    <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
    <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

    <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
    <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
    <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

    <!-- Optional, needed to visualize grid_map in rviz -->
    <!-- <exec_depend>grid_map_rviz_plugin</exec_depend> -->
    <exec_depend>erl_geometry_rviz_plugin</exec_depend>

    <test_depend condition="$ROS_VERSION == 1">rosunit</test_depend>
    <test_depend>erl_common</test_depend>
    <test_depend>erl_covariance</test_depend>
    <test_depend>erl_geometry</test_depend>
    <test_depend>erl_geometry_msgs</test_depend>
    <test_depend>erl_gaussian_process</test_depend>
    <test_depend>erl_gp_sdf</test_depend>
    <test_depend>erl_gp_sdf_msgs</test_depend>

    <export>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>
